--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -12,10 +12,11 @@
       <ul class="menu-list">
         <li class="menu-list-item {{ispage index}}active{{end}}"><a href="/" class="menu-list-link {{ispage index}}active{{end}}">Home</a>
         <li class="menu-list-item {{ispage menu1/*}}active{{end}}"><a href="/menu1/" class="menu-list-link {{ispage menu1}}active{{end}}">News</a>
+        <li class="menu-list-item {{ispage menu2/*}}active{{end}}"><a href="/menu2/" class="menu-list-link {{ispage menu2}}active{{end}}">Registry</a>
       </ul>
     </div>
     <div class="footer">
-      Mimi: a package that provides a component model for integrated assessment models
+      Mimi: providing a component model for integrated assessment models
     </div>
   </div>
   <!-- CONTENT -->
