Add menu4 to subfolders

--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -14,6 +14,7 @@
         <li class="menu-list-item {{ispage menu1/*}}active{{end}}"><a href="/menu1/" class="menu-list-link {{ispage menu1}}active{{end}}">News</a>
         <li class="menu-list-item {{ispage menu2/*}}active{{end}}"><a href="/menu2/" class="menu-list-link {{ispage menu2}}active{{end}}">Model Registry</a>
         <li class="menu-list-item {{ispage menu3/*}}active{{end}}"><a href="/menu3/" class="menu-list-link {{ispage menu3}}active{{end}}">Examples</a>      
+        <li class="menu-list-item {{ispage menu4/*}}active{{end}}"><a href="/menu4/" class="menu-list-link {{ispage menu4}}active{{end}}">Documentation</a>      
       </ul>
     </div>
     <div class="footer">
