--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -15,6 +15,7 @@
         <li class="menu-list-item {{ispage menu2/*}}active{{end}}"><a href="/menu2/" class="menu-list-link {{ispage menu2}}active{{end}}">Model Registry</a>
         <li class="menu-list-item {{ispage menu3/*}}active{{end}}"><a href="/menu3/" class="menu-list-link {{ispage menu3}}active{{end}}">Examples</a>      
         <li class="menu-list-item {{ispage menu4/*}}active{{end}}"><a href="/menu4/" class="menu-list-link {{ispage menu4}}active{{end}}">Documentation</a>      
+        <li class="menu-list-item {{ispage menu5/*}}active{{end}}"><a href="/menu5/" class="menu-list-link {{ispage menu5}}active{{end}}">Publications</a>      
       </ul>
     </div>
     <div class="footer">
